// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup /> snapshot should render the same 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`<RadioGroup /> snapshot should render the same, with <RadioGroup.Button /> 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -6,15 +6,15 @@
      <div
        class=\\"RadioButton__Wrapper-sc-1q7g63p-2\\"
      >
        <label
          class=\\"RadioButton-sc-1q7g63p-3 jYJGZV\\"
-         for=\\"radio-button-9\\"
+         for=\\"radio-button-12\\"
        >
          <input
            class=\\"HiddenInput-module__hidden-input___GW0sX\\"
-           id=\\"radio-button-9\\"
+           id=\\"radio-button-12\\"
            name=\\"foo\\"
            type=\\"radio\\"
            value=\\"Foo\\"
          />
          Foo
@@ -23,15 +23,15 @@
      <div
        class=\\"RadioButton__Wrapper-sc-1q7g63p-2\\"
      >
        <label
          class=\\"RadioButton-sc-1q7g63p-3 jYJGZV\\"
-         for=\\"radio-button-10\\"
+         for=\\"radio-button-13\\"
        >
          <input
            class=\\"HiddenInput-module__hidden-input___GW0sX\\"
-           id=\\"radio-button-10\\"
+           id=\\"radio-button-13\\"
            name=\\"foo\\"
            type=\\"radio\\"
            value=\\"Bar\\"
          />
          Bar
@@ -40,15 +40,15 @@
      <div
        class=\\"RadioButton__Wrapper-sc-1q7g63p-2\\"
      >
        <label
          class=\\"RadioButton-sc-1q7g63p-3 jYJGZV\\"
-         for=\\"radio-button-11\\"
+         for=\\"radio-button-14\\"
        >
          <input
            class=\\"HiddenInput-module__hidden-input___GW0sX\\"
-           id=\\"radio-button-11\\"
+           id=\\"radio-button-14\\"
            name=\\"foo\\"
            type=\\"radio\\"
            value=\\"Baz\\"
          />
          Baz"
`;

exports[`<RadioGroup /> snapshot simple with <RadioGroup.Button /> 1`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.HiddenInput-module__hidden-input___GW0sX {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c1 {
  margin-bottom: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  position: relative;
}

<div
  class="FieldGroup-module__field-group___H0qA5 c0"
  role="radiogroup"
>
  <div
    class=""
  >
    <label
      class="c1"
      for="radio-button-3"
    >
      <input
        class="HiddenInput-module__hidden-input___GW0sX"
        id="radio-button-3"
        name="groceries"
        type="radio"
        value="Foo"
      />
      Foo
    </label>
  </div>
  <div
    class=""
  >
    <label
      class="c1"
      for="radio-button-4"
    >
      <input
        class="HiddenInput-module__hidden-input___GW0sX"
        id="radio-button-4"
        name="groceries"
        type="radio"
        value="Bar"
      />
      Bar
    </label>
  </div>
  <div
    class=""
  >
    <label
      class="c1"
      for="radio-button-5"
    >
      <input
        class="HiddenInput-module__hidden-input___GW0sX"
        id="radio-button-5"
        name="groceries"
        type="radio"
        value="Baz"
      />
      Baz
    </label>
  </div>
</div>
`;

exports[`<RadioGroup /> snapshot simple with <RadioGroup.Button /> inline 1`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.HiddenInput-module__hidden-input___GW0sX {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c1 {
  display: inline-block;
  margin-right: 16px;
  vertical-align: top;
}

.c1:last-child {
  margin-right: 0;
}

.c2 {
  margin-bottom: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  position: relative;
}

<div
  class="FieldGroup-module__field-group___H0qA5 c0"
  role="radiogroup"
>
  <div
    class="c1"
  >
    <label
      class="c2"
      for="radio-button-6"
    >
      <input
        class="HiddenInput-module__hidden-input___GW0sX"
        id="radio-button-6"
        name="groceries"
        type="radio"
        value="Foo"
      />
      Foo
    </label>
  </div>
  <div
    class="c1"
  >
    <label
      class="c2"
      for="radio-button-7"
    >
      <input
        class="HiddenInput-module__hidden-input___GW0sX"
        id="radio-button-7"
        name="groceries"
        type="radio"
        value="Bar"
      />
      Bar
    </label>
  </div>
  <div
    class="c1"
  >
    <label
      class="c2"
      for="radio-button-8"
    >
      <input
        class="HiddenInput-module__hidden-input___GW0sX"
        id="radio-button-8"
        name="groceries"
        type="radio"
        value="Baz"
      />
      Baz
    </label>
  </div>
</div>
`;

exports[`<RadioGroup /> snapshot simple with <RadioGroup.Radio /> 1`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.HiddenInput-module__hidden-input___GW0sX {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.Label-module__label___opfdV {
  display: block;
  margin-bottom: 5px;
}

.c3 {
  border-radius: 50%;
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: 24px;
  position: relative;
  top: 6px;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  margin-right: 8px;
}

.c3:after {
  border-radius: 50%;
  content: '';
  display: none;
  height: 60%;
  left: 20%;
  position: absolute;
  top: 20%;
  width: 60%;
  background-color: #1250C4;
}

.c1 {
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 input:checked ~ .c2 {
  border-color: #1250C4;
}

.c1 input:checked ~ .c2:after {
  background-color: #1250C4;
  display: block;
}

.c1 input:focus ~ .c2 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c1:hover .c2,
.c1:focus .c2 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c1 input:checked:disabled ~ .c2 {
  background-color: #999999;
  border-color: #999999;
  box-shadow: inset 0 0 0 3.5px #ffffff;
}

.c0 {
  position: relative;
}

<div
  class="FieldGroup-module__field-group___H0qA5 c0"
  role="radiogroup"
>
  <label
    class="Label-module__label___opfdV c1"
  >
    <input
      class="HiddenInput-module__hidden-input___GW0sX"
      name="groceries"
      type="radio"
      value="Foo"
    />
    <span
      class="c2 c3"
    />
    <span>
      Foo
    </span>
  </label>
  <label
    class="Label-module__label___opfdV c1"
  >
    <input
      class="HiddenInput-module__hidden-input___GW0sX"
      name="groceries"
      type="radio"
      value="Bar"
    />
    <span
      class="c2 c3"
    />
    <span>
      Bar
    </span>
  </label>
  <label
    class="Label-module__label___opfdV c1"
  >
    <input
      class="HiddenInput-module__hidden-input___GW0sX"
      name="groceries"
      type="radio"
      value="Baz"
    />
    <span
      class="c2 c3"
    />
    <span>
      Baz
    </span>
  </label>
</div>
`;

exports[`<RadioGroup /> snapshot simple with button options 1`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.HiddenInput-module__hidden-input___GW0sX {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c1 {
  margin-bottom: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  position: relative;
}

<div
  class="FieldGroup-module__field-group___H0qA5 c0"
  role="radiogroup"
>
  <div
    class=""
  >
    <label
      class="c1"
      for="radio-button-0"
    >
      <input
        class="HiddenInput-module__hidden-input___GW0sX"
        id="radio-button-0"
        name="foo"
        type="radio"
        value="Foo"
      />
      Foo
    </label>
  </div>
  <div
    class=""
  >
    <label
      class="c1"
      for="radio-button-1"
    >
      <input
        class="HiddenInput-module__hidden-input___GW0sX"
        id="radio-button-1"
        name="foo"
        type="radio"
        value="Bar"
      />
      Bar
    </label>
  </div>
  <div
    class=""
  >
    <label
      class="c1"
      for="radio-button-2"
    >
      <input
        class="HiddenInput-module__hidden-input___GW0sX"
        id="radio-button-2"
        name="foo"
        type="radio"
        value="Baz"
      />
      Baz
    </label>
  </div>
</div>
`;

exports[`<RadioGroup /> snapshot simple with options 1`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.HiddenInput-module__hidden-input___GW0sX {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.Label-module__label___opfdV {
  display: block;
  margin-bottom: 5px;
}

.c3 {
  border-radius: 50%;
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: 24px;
  position: relative;
  top: 6px;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  margin-right: 8px;
}

.c3:after {
  border-radius: 50%;
  content: '';
  display: none;
  height: 60%;
  left: 20%;
  position: absolute;
  top: 20%;
  width: 60%;
  background-color: #1250C4;
}

.c1 {
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 input:checked ~ .c2 {
  border-color: #1250C4;
}

.c1 input:checked ~ .c2:after {
  background-color: #1250C4;
  display: block;
}

.c1 input:focus ~ .c2 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c1:hover .c2,
.c1:focus .c2 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c1 input:checked:disabled ~ .c2 {
  background-color: #999999;
  border-color: #999999;
  box-shadow: inset 0 0 0 3.5px #ffffff;
}

.c0 {
  position: relative;
}

<div
  class="FieldGroup-module__field-group___H0qA5 c0"
  role="radiogroup"
>
  <label
    class="Label-module__label___opfdV c1"
  >
    <input
      class="HiddenInput-module__hidden-input___GW0sX"
      name="foo"
      type="radio"
      value="Foo"
    />
    <span
      class="c2 c3"
    />
    <span>
      Foo
    </span>
  </label>
  <label
    class="Label-module__label___opfdV c1"
  >
    <input
      class="HiddenInput-module__hidden-input___GW0sX"
      name="foo"
      type="radio"
      value="Bar"
    />
    <span
      class="c2 c3"
    />
    <span>
      Bar
    </span>
  </label>
  <label
    class="Label-module__label___opfdV c1"
  >
    <input
      class="HiddenInput-module__hidden-input___GW0sX"
      name="foo"
      type="radio"
      value="Baz"
    />
    <span
      class="c2 c3"
    />
    <span>
      Baz
    </span>
  </label>
</div>
`;

exports[`<RadioGroup /> snapshot with an error 1`] = `
.ErrorMessage-module__error-message___MWbU- {
  color: var(--qtm-colors-error-900);
  cursor: text;
  display: block;
  font-size: 14px;
  font-style: italic;
  font-weight: 600;
  line-height: normal;
  margin-top: var(--qtm-spacing-xsmall);
}

.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.HiddenInput-module__hidden-input___GW0sX {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.Label-module__label___opfdV {
  display: block;
  margin-bottom: 5px;
}

.c3 {
  border-radius: 50%;
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: 24px;
  position: relative;
  top: 6px;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  margin-right: 8px;
}

.c3:after {
  border-radius: 50%;
  content: '';
  display: none;
  height: 60%;
  left: 20%;
  position: absolute;
  top: 20%;
  width: 60%;
  background-color: #1250C4;
}

.c1 {
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 input:checked ~ .c2 {
  border-color: #1250C4;
}

.c1 input:checked ~ .c2:after {
  background-color: #1250C4;
  display: block;
}

.c1 input:focus ~ .c2 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c1:hover .c2,
.c1:focus .c2 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c1 input:checked ~ .c2 {
  border-color: #e91b0c;
}

.c1 input:checked ~ .c2:after {
  background-color: #e91b0c;
  display: block;
}

.c1 input:focus ~ .c2 {
  border-color: #e91b0c;
  box-shadow: 0px 3px 5px -1px rgba(233,27,12,0.2),0px 5px 8px 0px rgba(233,27,12,0.14),0px 1px 14px 0px rgba(233,27,12,0.12);
}

.c1 .c2 {
  border-color: #e91b0c;
}

.c1:hover .c2,
.c1:focus .c2 {
  border-color: #e91b0c;
  box-shadow: 0px 3px 5px -1px rgba(233,27,12,0.2),0px 5px 8px 0px rgba(233,27,12,0.14),0px 1px 14px 0px rgba(233,27,12,0.12);
}

.c1 input:checked:disabled ~ .c2 {
  background-color: #999999;
  border-color: #999999;
  box-shadow: inset 0 0 0 3.5px #ffffff;
}

.c0 {
  position: relative;
}

<div
  class="FieldGroup-module__field-group___H0qA5 c0"
  role="radiogroup"
>
  <label
    class="Label-module__label___opfdV c1"
  >
    <input
      class="HiddenInput-module__hidden-input___GW0sX"
      name="groceries"
      type="radio"
      value="Foo"
    />
    <span
      class="c2 c3"
    />
    <span>
      Foo
    </span>
  </label>
  <span
    class="ErrorMessage-module__error-message___MWbU-"
  >
    Error text
  </span>
</div>
`;

exports[`<RadioGroup /> snapshot with required 1`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.HiddenInput-module__hidden-input___GW0sX {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.Label-module__label___opfdV {
  display: block;
  margin-bottom: 5px;
}

.c3 {
  border-radius: 50%;
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: 24px;
  position: relative;
  top: 6px;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  margin-right: 8px;
}

.c3:after {
  border-radius: 50%;
  content: '';
  display: none;
  height: 60%;
  left: 20%;
  position: absolute;
  top: 20%;
  width: 60%;
  background-color: #1250C4;
}

.c1 {
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 input:checked ~ .c2 {
  border-color: #1250C4;
}

.c1 input:checked ~ .c2:after {
  background-color: #1250C4;
  display: block;
}

.c1 input:focus ~ .c2 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c1:hover .c2,
.c1:focus .c2 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c1 input:checked:disabled ~ .c2 {
  background-color: #999999;
  border-color: #999999;
  box-shadow: inset 0 0 0 3.5px #ffffff;
}

.c0 {
  position: relative;
}

<div
  class="FieldGroup-module__field-group___H0qA5 c0"
  role="radiogroup"
>
  <label
    class="Label-module__label___opfdV c1"
  >
    <input
      class="HiddenInput-module__hidden-input___GW0sX"
      name="groceries"
      required=""
      type="radio"
      value="Foo"
    />
    <span
      class="c2 c3"
    />
    <span>
      Foo
    </span>
  </label>
</div>
`;
